--- a/www/stylesheets/application.css
+++ b/www/stylesheets/application.css
@@ -348,7 +348,7 @@ body {
   font-size: 20px;
 }
 
-.reviewHighlights .list-body {
+.reviewHighlights .list-body, .reviewsContainer .list-body {
   margin-top: 0px;
   border-top: none;
 }
